--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/afc8e857fc.js" crossorigin="anonymous"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Portafolio Pedro</title>
 </head>
 <body>
@@ -32,7 +36,7 @@
 
 
     <main class="contactomain">
-        <h2>Pongámonos en contacto</h2>
+        <h2 class="animate__animated animate__fadeIn">Pongámonos en contacto</h2>
         <div class="containercontacto">
             <div class="box-info">   
                     <h4> <i class="fa-solid fa-phone"></i>+51 994869807</h4>
