--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/afc8e857fc.js" crossorigin="anonymous"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Portafolio Pedro</title>
 </head>
 <body>
@@ -33,7 +37,7 @@
 
     <main class="habilidadesmain">
         <section>
-            <h2>Habilidades</h2>
+            <h2 class="animate__animated animate__fadeIn">Habilidades</h2>
             <p>Desarrollo interfaces modernas y según el estilo que se busca. Pasando la idea a la maquetación, posibles variantes y por último a la creación del código</p>
             <div class="logos">
                 <i class="fa-brands fa-figma"></i>
