--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/afc8e857fc.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <title>Portafolio Pedro Rivera</title>
 </head>
@@ -35,14 +38,14 @@
         <h1 class="oculto">Portafolio</h1>
         <section class="hero">
             <div class="text-hero">
-                <h2>Hola <span>.</span></h2>
+                <h2 class="animate__animated animate__fadeInDown">Hola <span>.</span></h2>
                 <h2 class="segundo"> Mi nombre es Pedro </h2>
-                <p>Estudiante de Ciencias de la Comunicación - Diseñador Ux - Programador web. 
+                <p class="segundo">Estudiante de Ciencias de la Comunicación - Diseñador Ux - Programador web. 
                 </p>
-                <p>Entusiasta por obtener nuevos conocimientos y seguir perfeccionando los aprendidos.</p>
-                <a href="./pages/sobremi.html">Más sobre mi</a>
+                <p class="segundo">Entusiasta por obtener nuevos conocimientos y seguir perfeccionando los aprendidos.</p>
+                <a class="segundo" href="./pages/sobremi.html">Más sobre mi</a>
             </div>
-            <img src="./assets/img/Foto para web.png" alt="Foto fachera">
+            <img class="animate__animated animate__fadeInRight" src="./assets/img/Foto para web.png" alt="Foto fachera">
         </section>
     </main>
     
