--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -36,7 +36,7 @@
 
 
     <main class="proyectosmain">
-        <h2 class="animate__animated animate__fadeIn">Últimos trabajos</h2>
+        <h2 class="titulos">Últimos trabajos</h2>
             <div>
                 <h3>G&G Proyecto Decoración</h3>
                 <img src="" alt="">
