--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="oculto">Portafolio</h1>
         <section class="hero">
             <div class="text-hero">
-                <h2 class="animate__animated animate__fadeInDown">Hola <span>.</span></h2>
+                <h2 class="hola">Hola <span>.</span></h2>
                 <h2 class="segundo"> Mi nombre es Pedro </h2>
                 <p class="segundo">Estudiante de Ciencias de la Comunicación - Diseñador Ux - Programador web. 
                 </p>
@@ -61,7 +61,7 @@
             </a>
         </div>
     </footer>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
