--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -66,7 +66,61 @@
                     </div>
                     <div class="slide">
                         <img src="../assets/img/Premiere.png" alt="Logo Premiere">
-                    </div>    
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/HTML.png" alt="Logo HTML">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Css.png" alt="Logo CSS">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Photoshop.png" alt="Logo Photoshop">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Illustrator.png" alt="Logo Illustrator">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Figma.png" alt="Logo Figma">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Bootstrap.png" alt="Logo bootstrap">
+                    </div>                    
+                    <div class="slide">
+                        <img src="../assets/img/Indesign.png" alt="Logo Indesign">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/After.png" alt="Logo After Effects">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Premiere.png" alt="Logo Premiere">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/HTML.png" alt="Logo HTML">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Css.png" alt="Logo CSS">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Photoshop.png" alt="Logo Photoshop">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Illustrator.png" alt="Logo Illustrator">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Figma.png" alt="Logo Figma">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Bootstrap.png" alt="Logo bootstrap">
+                    </div>                    
+                    <div class="slide">
+                        <img src="../assets/img/Indesign.png" alt="Logo Indesign">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/After.png" alt="Logo After Effects">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/Premiere.png" alt="Logo Premiere">
+                    </div>
                 </div>
             </div>
             
